- add:     The ability to change which sequence to use from the playlist dialog
- change:  Default 2D/3D sequence is now set by name
- fix:     When current sequence is modified, loading a seqence now confirms the action
- change:  Improve the default 3D detection regex
- add:     Loaded sequence name now shows in seqence editor

[- 0.0.40 -]

- fix:     Issue on helix where navigation was broken on sequence first load
- add:     Videos bumpers now have friendlier names on Kodi OSD. Trailers have movie title and thumbnail
- change:  Default 3D detection regex now uses case insensitive matching
- fix:     Prevent switching to other windows when experience is playing
           Note: Pressing C for playlist is not useful as the initial playlist is gone, and switching to other windows is problematic anyway
- add:     'Volume' setting added to all applicable modules
- fix:     Bug which in some instances caused volume to be set to 0
- add:     Up/Down in trivia now skips forward/back 3 slides
- fix:     Trivia sometimes stopping when navigating to it within the sequence
- fix:     Trivia music fadeout issues when music ends while navigating slides

[- 0.0.39 -]

- add:     Ability to post logs via Pastebin
- fix:     3D ratings bumpers were not able to be randomly selected

[- 0.0.38 -]

- add:     Added more comprehensive debug logging

[- 0.0.37 -]

- change:  Trailer setting 'Limit rating' moved to module as 'Rating Limit' with options for None, Max and Match features
- add:     Trailer module subsetting 'Limit rating: Max' which allows choice of ratings from the default rating system
- fix:     Possible fix for encoding issues when using trailers from the Kodi Database
- fix:     Changes to database handling to hopefully prevent 'OperationalError: unable to open database file' errors
- add:     Add 'APPLY TO QUEUE' option to playlist dialog
- change:  Rearrange some settings sections and make wording on some settings clearer